# PsychAD-GRN

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default_config.yaml
grn_atlas_forge/: aucell_scoring.py  fishers_enrichment.py  network_rewiring.py
grn_atlas_forge/utils/: __init__.py
psychad_grn/: __init__.py  dreamlet_analysis.py  grn_inference.py  regulon_specificity.py
psychad_grn/utils/: io.py  plotting.py  stats.py
r/: dreamlet_analysis.R
scripts/: run_pipeline.sh
